<resources>
    <string name="app_name">CommuteApp</string>

    <string name="google_maps_API_key">AIzaSyC8-FdbBLdSxUj7EVtpGvsyKWTMvB7JDcE</string>

    //GUI
    //Start Screen
    <string name="commute_app">Commute App</string>
    <string name="route_map">Route Map</string>
    <string name="track_map">Track Map</string>

    //Route Tracking
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    //Route Saving
    <string name="saveRouteTitle">Save Trip</string>
    <string name="journey">Journey</string>
    <string name="route">Route</string>
    <string name="save">Save</string>
    <string name="transport_method">Transport Method</string>
    <string name="e_g_bus">E.g. Bus</string>
    <string name="name">Trip Name</string>
    <string name="set_journey">Set Journey</string>
    <string name="resumeText">Resume</string>
    <string name="new_journey">New Journey</string>
    <string name="new_route">New Route</string>

    <string name="query1">SELECT * FROM trip ORDER BY column DESC LIMIT 1;</string>

    <string name="enter_journey_origin">Enter Journey Origin</string>
    <string name="enter_journey_destination">Enter Journey Destination</string>
    <string name="enter_route_name">Enter Route Name</string>
    <string name="create_route">Create Route</string>
    <string name="save_journey">Save Journey</string>
    <string name="cancel">Cancel</string>
    <string name="load_journey">Load Journey</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="edit_journey">Edit Journey</string>
    <string name="delete_journey">Delete Journey</string>
    <string name="load_route">Load Route</string>


</resources>
