<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtEditJourney"
        android:layout_width="273dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/edit_journey"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditJourney"
        android:layout_marginTop="29dp"
        android:text="@string/enter_journey_origin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/originName2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="16dp"
        android:inputType=""
        android:labelFor="@+id/originName"
        android:padding="10dp"
        android:singleLine="true"
        tools:labelFor="@id/originName2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/originName2"
        android:layout_marginTop="20dp"
        android:text="@string/enter_journey_destination"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/destinationName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditJourney"
        android:layout_marginTop="144dp"
        android:inputType=""
        android:labelFor="@+id/originName"
        android:padding="10dp"
        android:singleLine="true"
        tools:labelFor="@id/destinationName2" />

    <Button
        android:id="@+id/btnCancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destinationName2"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btnSaveJourney2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/destinationName2"
        android:text="@string/save_journey" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destinationName2"
        android:layout_marginEnd="19dp"
        android:layout_toStartOf="@+id/btnSaveJourney2"
        android:text="@string/delete_journey" />
</RelativeLayout>