<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="375dp"
        android:layout_height="567dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/saveTitle"
            android:layout_width="273dp"
            android:layout_height="57dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/saveRouteTitle"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="46dp" />

        <TextView
            android:id="@+id/journeyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/journeyDropdown"
            android:layout_alignStart="@+id/saveTitle"
            android:text="@string/journey"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/journeyDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/newJourney"
            android:layout_alignEnd="@+id/newRoute"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/newJourney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setJourney"
            android:layout_alignBottom="@+id/setJourney"
            android:layout_alignParentStart="true"
            android:text="@string/new_journey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setJourney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/routeName"
            android:layout_alignEnd="@+id/newRoute"
            android:layout_marginBottom="28dp"
            android:text="@string/set_journey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/routeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/routeDropdown"
            android:layout_alignStart="@+id/journeyName"
            android:layout_marginBottom="25dp"
            android:text="@string/route"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/routeDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/newRoute"
            android:layout_alignEnd="@+id/newRoute"
            android:layout_marginBottom="23dp" />

        <Button
            android:id="@+id/newRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/saveButton"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="78dp"
            android:text="@string/new_route"
            android:textSize="12sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="23dp"
            android:text="@string/save" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>