<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/routeTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/loadRoute">


    </TableLayout>

    <TextView
        android:id="@+id/loadRoute"
        android:layout_width="273dp"
        android:layout_height="57dp"
        android:layout_below="@+id/editButtonRoute"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/load_route"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editButtonRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/editButtonRoute"
        android:text="@string/edit" />

    <Button
        android:id="@+id/backButtonRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/backButton"
        android:text="@string/back" />

</RelativeLayout>