<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="commute.commuteapp.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="96dp">

        <Button
            android:id="@+id/Statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RouteMap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/route_statistics"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="118dp" />

        <Button
            android:id="@+id/RouteMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TrackMap"
            android:layout_alignBottom="@+id/TrackMap"
            android:layout_alignEnd="@+id/textView"
            android:text="@string/route_map"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="118dp" />

        <Button
            android:id="@+id/TrackMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="47dp"
            android:text="@string/track_map"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="118dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="273dp"
            android:layout_height="57dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/commute_app"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="46dp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
